substep: prevent resize with invisible border

--- a/protocol-designer/src/components/StepItem.css
+++ b/protocol-designer/src/components/StepItem.css
@@ -114,7 +114,12 @@
   @apply --clickable;
 }
 
-.highlighted_substep {
+.substep {
+  /* Invisible border for padding */
+  border: 2px solid transparent;
+}
+
+.highlighted {
   /* TODO Ian 2018-04-09 this border for highlight is also in lists.css in complib. Export from complib as class? */
   border: 2px solid var(--c-blue);
 }
